2009-08-20  Sterling Augustine  <sterling@jaw.hq.tensilica.com>

	* config/tc-xtensa.c (xg_copy_vinsn): New function.
	(finish_vinsn): Call xg_copy_vinsn.

2009-08-19  Sterling Augustine  <sterling@tensilica.com>

	* config/tc-xtensa.h (xtensa_frag_data): Rename unused field fr_prev
	to no_transform_end.
	* config/tc-xtensa.c (xtensa_mark_difference_of_two_symbols): Set
	and use no_transform_end.

2009-08-18  Kai Tietz  <kai.tietz@onevision.com>

	* config/obj-coff-seh.c: Add copyright notice.
	* config/obj-coff-seh.h: Add copyright notice.
	Add x64 specific macros from coff/pe.h header.

2009-08-18  Sterling Augustine  <sterling@tensilica.com>

	* config/tc-xtensa.c (xtensa_create_xproperty_segments): Use
	sizeof instead of hard-coded value.
	(add_xt_block_frags): Remove unused local variable.
	(frag_flags_to_number): Change return type to flagword.  Remove
	unused local variable.

2009-08-17  Sterling Augustine  <sterling@tensilica.com>

	* config/tc-xtensa.c (xtensa_frob_label): move call to 
	do_align_targets to set frag_type only.

2009-08-17  Kai Tietz  <kai.tietz@onevision.com>

	* config/obj-coff-seh.c: New file.
	* config/obj-coff-seh.h: Likewise.
	* config/obj-coff.c (obj-coff-seh.c): Add include.
	(coff_pseudo_table): Add new .seh... commands.
	* config/obj-coff.h (obj_coff_seh_do_final): Add new
	function prototype.
	(obj_coff_generate_pdata): New obj-coff hook.
	* gas/write.c (size_seg): Avoid sizing of already sized
	sections.
	(write_object_file): Call conditional hook
	objc_coff_generate_pdata.
	* Makefile.am: Add dependencies for new files.
	* Makefile.in: Regenerated.

2009-08-17  Nick Clifton  <nickc@redhat.com>

	* config/tc-microblaze.c: Include safe-ctype.h instad of ctype.h.
	(parse_reg): Use safe-ctype.h macros.
	(parse_exp): Likewise.
	(md_assemble): Likewise.

2009-08-11  DJ Delorie  <dj@redhat.com>

	* config/tc-mep.c (md_estimate_size_before_relax): Handle weak
	symbols correctly.
	(md_convert_frag): Likewise.